versions/1.6.15/README.md
# Gaussian Splat COLMAP Dataset Generator

当前版本：`1.6.9`

## 1.6.9 可编辑区域 Box 排线

“室内多层排线 → 轮廓排线”新增默认关闭的“启用区域排线”。在当前视图中心创建线框 Box 后，可以用 Blender 原生缩放、旋转和编辑模式加线、挤出，改成 L 形等封闭异形区域，然后点击“在区域内生成路径”。主线、细部短线、门洞探入和审计补线均受真实网格体积约束，凹角处的连接不能穿出区域。

区域辅助物不参与渲染、排线避障、球壳相机探测和导出点云采样。后台计算、进度和取消沿用轮廓排线流程。仅约束路径光心中心线，不裁剪相机视野。关闭区域功能后恢复原全场景或起点可达范围。

修复扩展加载器替换 `bl_info` 后界面退回旧版号的问题，N 面板显示 `GS UI v1.6.9`。

## 1.6.8 真实相机覆盖审计与直线探入

轮廓主线之外增加安全的直线探入短线，检查门洞、凹位与家具遮挡边缘。已有相机时使用实际视锥、裁剪面、首个网格命中和光心视差检查保留路径范围内的表面采样，仅保留能改善薄弱表面的补线。探入短线每站以 3–12 台相机定向观察最多四个目标，不再向无关方向铺满球壳。

N 面板“室内多层排线”中的“检查现有相机覆盖并补线”可直接作用于现有路径集合，保留原曲线。门洞补线和整体表面审计均有独立开关与数量参数；补线完成后重新生成相机。当前定向验证对应“旧全景立方体 → 球壳 12”模式。

“轻量相机代理”默认开启，普通视图和单路径检查均可显示青色光心与橙色朝向短线。代理不创建 Mesh 或场景对象，移动、删除相机后自动刷新，关闭时恢复原生相机显示尺寸。修复带厚度曲线误入路径和相机碰撞检测的问题。

审计为分物体抽样，不能等同于完整表面覆盖或高斯训练质量保证。

## 1.6.7 场景表面感知球壳补视角

球壳保留原有 12 方位，并可选依据当前 Blender 实际网格追加少量定向相机。每个站点以三档浅俯仰、24 个方位探测深度突变、物体切换和空间开口；低位遮挡边缘优先占用一半补拍预算，并以左右横移成对观察远侧表面，减少沙发与茶几、吧台凳脚和凹位被前景遮挡的问题。普通路径默认每站最多 4 台，细部短线最多再增加 2 台。

面板可关闭该功能，也可调每站补视角上限、探测距离和深度突变阈值。补充相机仍执行原有逐台净距检测，只保留安全位置。

## 1.6.6 可选 CAD 平面图站点配额

路径规划完成后，可选开启“站点配额平面图”。插件使用正交 Workbench 临时渲染生成灰白 CAD 风格户型底图，并在独立图像编辑器中叠加蓝色路径、青色常规站点和粉色配额站点。输入数量后直接在图上拖出绿色矩形，即可指定该区域沿路径放置的站点总数；多个不重叠区域可以叠加使用。

该功能默认关闭。关闭时不会读取区域配置，原有路径站点数量、细部短线最低采样和球壳生成逻辑保持不变。开启后先替换框内的常规采样，再按配额在框内曲线长度上均匀分配；细部短线既有最低站点数仍是安全下限。

## 1.6.5 单路径轻量相机检查

选中一条路径后，通过 N 面板按钮或 `Alt + Shift + I` 进入检查模式：完整场景保留，仅隐藏其他路径和插件生成相机的原生大线框。当前路径上的相机用青色 GPU 点与橙色短朝向线批量绘制，可调点大小、米制朝向长度与穿透显示。代理不创建任何对象、Mesh 或材质，并缓存相机数据和 GPU 批次以保持视口流畅；退出时恢复原显示状态。绿色金字塔代理功能已移除，旧版残留会自动清理。

## 1.6.4 球壳相机站点预算修复

轮廓排线包含大量细部线时，球壳相机生成会把每条细部线的最低采样站点计入真实预算。旧的 120 站点设置不足时自动扩展，不再中止并留下空相机集合；面板同时显示扩展后的站点数和预计相机总数。每个站点的 12 台相机独立检查，只剔除贴近或穿过地面、墙面及物体的单台相机，其余相机保留。相邻站点默认绕竖直轴递增旋转 5°，旋转步长和表面净距都可在面板调节。

## 1.6.3 连续空隙优先补线

优先为沙发与茶几之间等连续空隙分配细部路线，减少安全候选被其他表面收益挤掉的问题。每条缺口路线之后继续检查未覆盖支路，普通短线也参与空间去重。总预算保持可控，主线、跨高度通行和顶层净空处理沿用 1.6.2。
安装参数、使用方法与验证范围见 [轮廓排线使用说明](CONTOUR_GUIDE_zh.md)，版本变更见 [CHANGELOG](CHANGELOG.md)。

实际升级基线：`blender_gs_colmap_exporter-1.2.7-chunked-background-render`

本版本新增 Mesh 引导高斯流水线。安装与使用见 `README_MESH_GUIDED_GS_CN.md`，数据契约见
`DATA_FORMAT_MESH_GUIDED_CN.md`，训练器接口见 `TRAINER_INTERFACE_CN.md`。

## Resume recovery (v1.2.7)

Legacy RGB/Depth/ID frames with valid file structure are recovered even when a v1.2.6
legacy_manifest.json exists but their per-frame commit is missing. Safe missing commits are
rebuilt before chunk selection, so a mixed old/new output directory resumes from the first truly
missing frame instead of rendering frame 1 again. Visibility-dependent per-object Depth/Mask
outputs still require their original commit marker.

Blender 5.1 扩展，用于在已知三维场景中生成训练相机、Cycles 图片、COLMAP `sparse/0`、`transforms.json` 和 `dataset_report.json`。

## 平衡吞吐量的分段独立进程渲染（v1.2.6）

后台渲染默认每 500 帧为一批，并在批次内默认开启 Cycles Persistent Data，复用 BVH、纹理和渲染数据。批次完成后工作进程仍会退出，释放 RAM、VRAM、Cycles 缓存和降噪器状态，再启动下一批。`每进程帧数` 和 Persistent Data 均可在渲染面板修改。

可靠性行为：

- Resume 会同时读取状态文件和磁盘实际输出，从首个缺失或损坏帧直接开始。
- 状态文件缺失但图片与逐帧提交记录完整时，已有帧仍会跳过。
- 每批结束验证 PNG/JPEG/EXR 结构及 RGB/Depth/ID/对象输出提交记录；未通过不会进入下一批。
- 工作进程异常自动重试一次；日志检测 out of memory、CUDA、OptiX 和 device error。
- `_gs_colmap_jobs/<输出路径哈希>/chunk_history.json` 记录每批范围、PID、尝试次数、峰值 RAM/VRAM 和独立日志路径。
- 取消后台任务会终止监督器及当前工作进程，已原子提交的帧保留供下次续渲。

## Blender 5.1 安装

在 Blender 中打开 `Edit > Preferences > Get Extensions`，使用右上角菜单选择 `Install from Disk...`，安装发布目录中的 zip。启用后，在 3D 视图按 `N`，打开 `GS` 页签。

## 路径曲线采集模式

路径曲线支持两种采集模式：

- `六面立方体兼容`：旧版同光心 `px/nx/py/ny/pz/nz` 六面输出。相机数量、顺序、命名、方向和 90 度透视参数保持不变。
- `科学三层覆盖（推荐）`：沿多条 Curve 建立分布式多高度机位，使用真实相机 FOV、自适应间距、射线覆盖评分、地面/天花板补拍和视图重叠图修复。

为避免旧 `.blend` 文件打开后改变行为，新属性默认值仍是 `六面立方体兼容`。新数据集建议手动切换到 `科学三层覆盖（推荐）`。

## 科学模式快速使用

1. 选择一条手动 Curve、一个包含多条 Curve 的 Collection，或点击 `生成井字排线`。
2. 将 `采集模式` 切换为 `科学三层覆盖（推荐）`。
3. 保持高度层数 3、目标重叠率 0.70、间距 0.25-0.65 m 和图片预算倍率 1.0。
4. 点击 `创建科学相机阵列`。规划期间显示阶段和进度，可按 Esc 或点击 `取消科学规划`。
5. 检查相机和可选调试显示，然后按原流程渲染或仅导出 COLMAP。

科学模式保持所有相机的焦距、传感器、分辨率和导出坐标约定一致，不会按位置改变内参。

## 科学单相机序列帧（v1.2.2，推荐）

科学模式新增三种实现后端：`LEGACY_CUBEMAP_OBJECTS`、`SCIENTIFIC_CAMERA_OBJECTS` 和推荐的 `SCIENTIFIC_POSE_SEQUENCE`。旧工程仍默认使用旧六面或多相机行为，不会自动切换或删除现有相机。

选择 `单相机序列帧` 后，覆盖规划、近场保护、极向补拍、Bridge 和最终图片预算均不改变；插件把每个最终视角保存为 `PoseSample`，场景只保留一台 `GS_CAPTURE_CAMERA`。例如 720 个规划姿态仍输出 720 张训练图，只把 720 个 Blender 相机对象降为 1 个。

规划结果写入 `camera_sequence.json`，它是渲染、恢复、COLMAP、`transforms.json`、深度、ID、对象输出、报告和 Patch 的唯一姿态来源。每帧记录稳定的 `logical_frame_id`、`IMAGE_ID`、Segment、完整 `matrix_world`、共享内参哈希、输出路径和 `PENDING/RENDERING/COMPLETE/FAILED/SKIPPED` 状态。

正式渲染不会执行 Render Animation：场景始终停在 `Source Scene Frame`，只有主相机按清单逐姿态移动。每帧更新依赖图后校验活动相机、位置、旋转和内参；RGB/Depth/ID/对象输出先写暂存目录，全部成功并生成提交清单后才标为 `COMPLETE`。恢复时不重新规划、不重排，也不改变编号。

时间轴预览是独立功能：位置使用线性插值，旋转使用符号连续的四元数关键帧，Segment 起点带 Marker。预览关键帧从不参与正式渲染或导出。调试显示支持当前姿态、前后 N 帧、每 N 帧抽样和全量轻量 Empty。

Coverage Patch 在序列模式中把确认后的补拍姿态追加到独立 Patch Segment，使用 `frame_patch_000001...`，保留所有旧图片路径和 COLMAP ID，只渲染新增姿态；预览相机确认后会转成 PoseSample 并删除，不会在场景中累积正式 Patch 相机对象。

主要新增输出：

```text
camera_sequence.json
_gs_frame_commits/frame_000001.json
images/frame_000001.png
depth/frame_000001.png|exr
id/frame_000001.png
sparse/0/{cameras,images,points3D}.txt
transforms.json
dataset_report.json
```
## 近场采集保护（v1.2.1）

自由空间、小空间和混合光心模式默认启用近场采集保护：

- 防穿模安全距离继续只负责碰撞安全；推荐拍摄距离默认是 0.60-1.00 m。
- 玄关和门洞优先生成门外向内、门口桥接、门内回望、左右偏移和相邻空间回拍机位。
- 候选按远、中、近三档选择，远景和中景优先，近景默认不超过最终相机的 15%。
- 单一近距离对象或表面占据约 65% 以上视锥且共同环境不足时，候选会被淘汰。
- 只有目标确实欠覆盖，并与至少两台中远景相机形成足够重叠和真实基线时，近景才可作为少量补拍。
- 近场步长按最近目标距离的 20%-30% 收紧，同时保留最小光心去重距离和候选总数上限。
- `dataset_report.json` 新增 `near_field` 和完整近场规划统计；调试集合分别显示远、中、近与拒绝点。


## 单路径轻量相机检查（v1.6.5）

- 在 3D 视图选中一条路径，点击 N 面板“孤立所选路径并查看相机”，或按 `Alt + Shift + I`。
- 完整场景保持可见，仅隐藏同一路径集合中的其他曲线和生成相机的原生大线框。
- 相机位置显示为青色 GPU 点，镜头方向显示为橙色短线；可调整点大小、朝向线长度和穿透显示。
- 代理使用一个视口绘制回调，不创建对象、Mesh 或材质。再次点击按钮或按快捷键会恢复进入前的显示状态。
- 绿色金字塔 Mesh 代理功能已经移除；加载文件或生成新阵列时会清理旧版残留代理。

摄影棚、室外自动布光、自动曝光、灯具补光以及 `.ply/.splat` 高斯文件导入和 GPU 预览已从扩展中完整移除。

## Coverage Patch / 局部样本补齐

第一次科学规划和渲染后，可在保留原相机与原图片编号的前提下，对局部欠覆盖区域增量补拍：

- 支持选中 Mesh、Mesh/Empty 定向包围盒、全场景欠覆盖自动检测。
- 重算已有相机观察次数、方向多样性和重叠图，只在目标附近生成安全候选。
- 4 x 4 快速预筛后只对少量候选做完整射线复检；达到目标覆盖和最低观察比例后自动停止。
- `PatchCameras_Preview` 支持预览、手动删除和重生成；确认后进入 `PatchCameras_Final`。
- 补齐相机使用 `cam_patch_*` / `frame_patch_*`，不打乱 `frame_0001...` 原序列。
- “仅渲染补齐相机”只产出新增图片，随后合并更新 COLMAP、`transforms.json`、`dataset_report.json` 和 `patch_manifest.json`。

详细设计、数据流、假设和测试清单见 `COVERAGE_PATCH_DESIGN_zh.md`。

## 后台渲染准备优化（v1.1.51）

后台场景副本已经包含正式相机时，渲染进程会直接复用这些相机，不再因为 `自动创建阵列` 开启而重复执行一次完整科学规划。只有场景中完全没有相机时才自动规划。后台状态会明确显示配置渲染器、复用相机或创建阵列。

## 自动室内路径

自动路径复用现有地面、天花板、净空、连通域和防穿模检测：

- 普通房间按局部 PCA 主轴生成平行主线，每约两条主线增加一条垂直横线。
- 狭窄走廊和玄关保留基于双侧净空的中轴线，在门洞、转角和连通处保留节点。
- 不强制把独立 Curve 首尾连接成蛇形。
- 不同地面高度生成独立水平 Curve，不生成 Z 方向斜坡。
- 科学模式先生成一套 `Base` 空间网络，再按局部 floor/ceiling 投影为 2、3 或 4 个相机高度层，避免源路径重复分层。

## 默认科学参数

| 参数 | 默认值 |
|---|---:|
| 高度层数 | 3 |
| 目标重叠率 | 0.70 |
| 最低邻居重叠率 | 0.50 |
| 最小路径间距 | 0.25 m |
| 最大路径间距 | 0.65 m |
| 相机安全距离 | 0.25 m |
| 图片预算倍率 | 1.0 |
| 表面最低观察次数 | 3 |
| 表面推荐观察次数 | 5 |
| 最大朝向变化 | 15 度 |
| 最大高质量入射角 | 75 度 |
| 射线质量 | 普通 12 x 12 |
| 自动覆盖优化 | 开 |
| 自动补地面和天花板 | 开 |

所有米制参数通过 `scene.unit_settings.scale_length` 换算为场景单位。

规划采用两阶段射线检测：全部 Yaw/Pitch 候选先以 4 x 4 网格快速预筛，只对最终入选相机按“射线质量”的 8 x 8、12 x 12 或 16 x 16 网格复检。可见面分母来自全部合法候选；最终相机使用完整质量结果做总体 Yaw 修复、地面/天花板极向修复和重叠图修复。

候选光心先通过缓存场景 BVH 的精确最近表面查询和三方向奇偶检测，排除安全距离不足或位于 Mesh 内部的位置，再保留原有碰撞推出作为最终防线。最终覆盖明细只在全部确定性替换完成后构建一次，避免大图片预算下重复展开同一批表面单元。

Blender 5.1 参考测试中，普通 12 x 12 质量、720 张图的客厅用例总体/地面/天花板覆盖率为 98.097% / 95.383% / 95.312%，重复光心 0、单连通分量、弱邻居 0。

## 调试和报告

开启 `显示调试结果` 后，插件只管理 `GS_SCIENTIFIC_PATH_DEBUG` Collection。分层路径使用不同颜色，欠覆盖表面使用红色点，极向关键帧使用单独颜色，可显示视图重叠边。重新生成不会删除用户对象。

`dataset_report.json` 保留全部旧字段，并增加 `camera_planning`：模式、旧预算、最终数量、分层数量、自适应间距、重复光心、覆盖单元、地面/天花板/竖直面覆盖、逐对象覆盖、欠覆盖单元、不可达单元、图连通分量、极向/冗余/桥接相机数量等。

## 兼容性

- 旧六面模式由原 `expand_to_cubemap` 逻辑执行，并有 Blender 5.1 固定基线测试。
- 其他相机阵列模式不进入科学规划分支。
- Cycles、图片/深度/ID/单物品输出、断点续渲、后台渲染、ETA、COLMAP 和 `transforms.json` 逻辑未改动。
- 新属性均有默认值，旧 `.blend` 文件可继续打开。

详细功能和输出说明见 `MANUAL_zh.md`。
